XWIKI-10859: The "Change photo" button is not correctly displayed on ie9

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/ie-all.css
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/ie-all.css
@@ -8,3 +8,7 @@
 .breadcrumb > li {
   display: inline;
 }
+
+.buttonwrapper a.attachment-picker-start {
+  filter: none;
+}
